# cursoaid

./: asdasd  404.html  Comandos Trilha Dev  Comandos Trilhas Dev  Projeto Final  README.md  index.html  mkdocs.yml  ottocotacodes  pyproject.toml  sitemap.xml
docs/: ideias_posts.md  index.md
ideias_posts/: index.html
posts/ideias/: arquivo
search/: search_index.json
site/: index.html  sitemap.xml
site/search/: search_index.json
