[project]
name = "cursoaid"
version = "0.1.0"
description = ""
authors = [
    {name = "ottocota",email = "ottocota@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"

